# Internet-Scheduler

./: CMakeLists.txt  main.cpp
src/: main.cpp  network_adapter.hpp  network_adapter_window.hpp  timer.hpp
